--- a/package.json
+++ b/package.json
@@ -2,25 +2,35 @@
   "name": "biliparty",
   "version": "1.0.0",
   "description": "Watch bilibili with friends",
-  "scripts": {
-    "build": "mkdir -p build && cd build && webpack",
-    "lint": "eslint src/js/",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Wenhao Ji",
+  "author": "Wenhao Ji & Lei Lu",
   "license": "MIT",
-  "engines": {
-    "node": "7.0.0",
-    "npm": "3.10.8"
+  "dependencies": {
+    "@craco/craco": "^6.4.3",
+    "peerjs": "^1.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "INLINE_RUNTIME_CHUNK=false craco build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "eslint": "3.14.0",
-    "eslint-config-airbnb": "14.0.0",
-    "eslint-import-resolver-babel-module": "2.2.1",
-    "eslint-plugin-import": "2.2.0",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "1.16.2",
-    "webpack-node-externals": "1.5.4",
-    "webpack-version-file-plugin": "0.2.2"
+    "@types/chrome": "^0.0.126",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
