fixed eslint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "comma-dangle": 0,
     "import/prefer-default-export": 0,
+    "max-classes-per-file": 0,
     "no-restricted-syntax": 0,
     "no-underscore-dangle": 0,
     "yoda": 0,
