--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,5 @@ jobs:
         with:
           node-version: '17.x'
       - run: npm ci
+      - run: ./node_modules/.bin/eslint src/js
       - run: npm test
