--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "mocha": true
   },
   "extends": "airbnb/base",
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "rules": {
     "comma-dangle": 0,
     "import/prefer-default-export": 0,
