--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "biliparty",
-  "version": "1.0.0",
-  "description": "Watch bilibili with friends",
+  "name": "cheers",
+  "version": "0.0.1",
+  "description": "Watch Bilibili with friends",
   "author": "Wenhao Ji & Lei Lu",
   "license": "MIT",
   "dependencies": {
@@ -10,11 +10,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false craco build",
+    "build": "INLINE_RUNTIME_CHUNK=false CI=false craco build",
     "lint": "eslint src/js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,11 +32,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@types/chrome": "^0.0.126",
     "@types/react-router-dom": "^5.1.6",
-    "babel-eslint": "^10.1.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-import-resolver-babel-module": "5.3.1",
-    "eslint-plugin-import": "2.26.0"
+    "eslint-plugin-import": "2.26.0",
+    "jest": "^26.6.0"
   }
 }
