--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "comma-dangle": 0,
     "import/prefer-default-export": 0,
     "max-classes-per-file": 0,
+    "no-param-reassign": ["error", { "props": false }],
     "no-restricted-syntax": 0,
     "no-underscore-dangle": 0,
     "yoda": 0,
