--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "INLINE_RUNTIME_CHUNK=false CI=false craco build",
-    "lint": "eslint src/js",
+    "lint": "eslint src/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
