refactor the content script using es module

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,7 +20,7 @@
                 "<all_urls>"
             ],
             "js": [
-                "static/js/peerjs.js"
+                "static/js/content.js"
             ]
         }
     ]
