send the host peerId from tab to popup

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "env": {
     "browser": true,
     "mocha": true,
-    "es6": true
+    "es6": true,
+    "webextensions": true
   },
   "extends": "airbnb/base",
   "parser": "@babel/eslint-parser",
